syntax = "proto3";

package coresdk.workflow_completion;

import "common.proto";
import "workflow_commands.proto";
import "temporal/api/failure/v1/message.proto";

/// Result of a single workflow activation, reported from lang to core
message WFActivationCompletion {
    // The task queue the workflow activation you are completing originated from
    string task_queue = 1;
    // The run id from the workflow activation you are completing
    string run_id = 2;
    oneof status {
        Success successful = 3;
        Failure failed = 4;
    }
}

/// Successful workflow activation with a list of commands generated by the workflow execution
message Success {
    // A list of commands to send back to the temporal server
    repeated workflow_commands.WorkflowCommand commands = 1;
}

/// Failure to activate or execute a workflow
message Failure {
    temporal.api.failure.v1.Failure failure = 1;
}

